Remove references to API marked for removal.