@@ -1,31 +1,31 @@
 /*
  * GDMatrix
- *  
+ *
  * Copyright (C) 2020, Ajuntament de Sant Feliu de Llobregat
- *  
- * This program is licensed and may be used, modified and redistributed under 
- * the terms of the European Public License (EUPL), either version 1.1 or (at 
- * your option) any later version as soon as they are approved by the European 
+ *
+ * This program is licensed and may be used, modified and redistributed under
+ * the terms of the European Public License (EUPL), either version 1.1 or (at
+ * your option) any later version as soon as they are approved by the European
  * Commission.
- *  
- * Alternatively, you may redistribute and/or modify this program under the 
- * terms of the GNU Lesser General Public License as published by the Free 
- * Software Foundation; either  version 3 of the License, or (at your option) 
- * any later version. 
- *   
- * Unless required by applicable law or agreed to in writing, software 
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT 
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
- *    
- * See the licenses for the specific language governing permissions, limitations 
+ *
+ * Alternatively, you may redistribute and/or modify this program under the
+ * terms of the GNU Lesser General Public License as published by the Free
+ * Software Foundation; either  version 3 of the License, or (at your option)
+ * any later version.
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+ * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *
+ * See the licenses for the specific language governing permissions, limitations
  * and more details.
- *    
- * You should have received a copy of the EUPL1.1 and the LGPLv3 licenses along 
- * with this program; if not, you may find them at: 
- *    
+ *
+ * You should have received a copy of the EUPL1.1 and the LGPLv3 licenses along
+ * with this program; if not, you may find them at:
+ *
  * https://joinup.ec.europa.eu/software/page/eupl/licence-eupl
- * http://www.gnu.org/licenses/ 
- * and 
+ * http://www.gnu.org/licenses/
+ * and
  * https://www.gnu.org/licenses/lgpl.txt
  */
 package org.santfeliu.jmx.swing;
@@ -232,8 +232,8 @@ public class JMXMonitor extends javax.swing.JFrame
           interval = Integer.parseInt(refreshTextField.getText());
         }
         catch (Exception ex)
-        {          
-        } 
+        {
+        }
         monitor.interval = interval;
         monitor.start();
       }
@@ -308,11 +308,11 @@ public class JMXMonitor extends javax.swing.JFrame
         Integer num = (Integer)value;
         if (minValue != null && minValue.trim().length() > 0)
         {
-          if (num.compareTo(new Integer((String)minValue)) < 0) return true;
+          if (num.compareTo(Integer.valueOf((String)minValue)) < 0) return true;
         }
         if (maxValue != null && maxValue.trim().length() > 0)
         {
-          if (num.compareTo(new Integer((String)maxValue)) > 0) return true;
+          if (num.compareTo(Integer.valueOf((String)maxValue)) > 0) return true;
         }
       }
     }
@@ -475,7 +475,7 @@ public class JMXMonitor extends javax.swing.JFrame
           {
             JMXMonitor.this.setState(JFrame.NORMAL);
           }
-          
+
           // sleep
           int i = 0;
           while (i < interval && !stop)
