@@ -1,31 +1,31 @@
 /*
  * GDMatrix
- *  
+ *
  * Copyright (C) 2020, Ajuntament de Sant Feliu de Llobregat
- *  
- * This program is licensed and may be used, modified and redistributed under 
- * the terms of the European Public License (EUPL), either version 1.1 or (at 
- * your option) any later version as soon as they are approved by the European 
+ *
+ * This program is licensed and may be used, modified and redistributed under
+ * the terms of the European Public License (EUPL), either version 1.1 or (at
+ * your option) any later version as soon as they are approved by the European
  * Commission.
- *  
- * Alternatively, you may redistribute and/or modify this program under the 
- * terms of the GNU Lesser General Public License as published by the Free 
- * Software Foundation; either  version 3 of the License, or (at your option) 
- * any later version. 
- *   
- * Unless required by applicable law or agreed to in writing, software 
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT 
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
- *    
- * See the licenses for the specific language governing permissions, limitations 
+ *
+ * Alternatively, you may redistribute and/or modify this program under the
+ * terms of the GNU Lesser General Public License as published by the Free
+ * Software Foundation; either  version 3 of the License, or (at your option)
+ * any later version.
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+ * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *
+ * See the licenses for the specific language governing permissions, limitations
  * and more details.
- *    
- * You should have received a copy of the EUPL1.1 and the LGPLv3 licenses along 
- * with this program; if not, you may find them at: 
- *    
+ *
+ * You should have received a copy of the EUPL1.1 and the LGPLv3 licenses along
+ * with this program; if not, you may find them at:
+ *
  * https://joinup.ec.europa.eu/software/page/eupl/licence-eupl
- * http://www.gnu.org/licenses/ 
- * and 
+ * http://www.gnu.org/licenses/
+ * and
  * https://www.gnu.org/licenses/lgpl.txt
  */
 package org.santfeliu.util;
@@ -53,7 +53,7 @@ public class Properties extends TreeMap
   public Properties()
   {
   }
-  
+
   public void setProperty(String name, Object value)
   {
     super.put(name, value);
@@ -63,12 +63,12 @@ public class Properties extends TreeMap
   {
     return super.get(name);
   }
-  
+
   public Object removeProperty(String name)
   {
     return super.remove(name);
   }
-  
+
   public boolean containsProperty(String name)
   {
     return super.containsKey(name);
@@ -167,14 +167,14 @@ public class Properties extends TreeMap
                 }
                 else if (svalue.equals("true") || svalue.equals("false"))
                 {
-                  value = new Boolean(svalue);
+                  value = Boolean.valueOf(svalue);
                 }
                 else
                 {
                   try
                   {
                     double number = Double.parseDouble(svalue);
-                    value = new Double(number);
+                    value = number;
                   }
                   catch (NumberFormatException ex)
                   {
@@ -215,7 +215,7 @@ public class Properties extends TreeMap
             valueBuffer.append((char)ch);
           }
           break;
-        
+
         case 3: // look for ending '"'
           if (ch == '"' || ch == -1)
           {
@@ -231,7 +231,7 @@ public class Properties extends TreeMap
       else ch = reader.read();
     }
   }
-  
+
   public boolean loadFromString(String s)
   {
     if (s == null) return false;
@@ -245,7 +245,7 @@ public class Properties extends TreeMap
       return false;
     }
   }
-  
+
   public String saveToString()
   {
     try
@@ -259,7 +259,7 @@ public class Properties extends TreeMap
       return "";
     }
   }
-  
+
   public static void main(String args[])
   {
     try
