@@ -1,31 +1,31 @@
 /*
  * GDMatrix
- *  
+ *
  * Copyright (C) 2020, Ajuntament de Sant Feliu de Llobregat
- *  
- * This program is licensed and may be used, modified and redistributed under 
- * the terms of the European Public License (EUPL), either version 1.1 or (at 
- * your option) any later version as soon as they are approved by the European 
+ *
+ * This program is licensed and may be used, modified and redistributed under
+ * the terms of the European Public License (EUPL), either version 1.1 or (at
+ * your option) any later version as soon as they are approved by the European
  * Commission.
- *  
- * Alternatively, you may redistribute and/or modify this program under the 
- * terms of the GNU Lesser General Public License as published by the Free 
- * Software Foundation; either  version 3 of the License, or (at your option) 
- * any later version. 
- *   
- * Unless required by applicable law or agreed to in writing, software 
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT 
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
- *    
- * See the licenses for the specific language governing permissions, limitations 
+ *
+ * Alternatively, you may redistribute and/or modify this program under the
+ * terms of the GNU Lesser General Public License as published by the Free
+ * Software Foundation; either  version 3 of the License, or (at your option)
+ * any later version.
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+ * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *
+ * See the licenses for the specific language governing permissions, limitations
  * and more details.
- *    
- * You should have received a copy of the EUPL1.1 and the LGPLv3 licenses along 
- * with this program; if not, you may find them at: 
- *    
+ *
+ * You should have received a copy of the EUPL1.1 and the LGPLv3 licenses along
+ * with this program; if not, you may find them at:
+ *
  * https://joinup.ec.europa.eu/software/page/eupl/licence-eupl
- * http://www.gnu.org/licenses/ 
- * and 
+ * http://www.gnu.org/licenses/
+ * and
  * https://www.gnu.org/licenses/lgpl.txt
  */
 package org.santfeliu.kernel.service;
@@ -70,12 +70,12 @@ public class DBAddress extends DBEntityBase
   private String stdaplmod;
   private String baixasw;
   private String valdata;
-  
+
   private DBStreet street;
 
   private static final InternalValueConverter typeIdConverter =
     new InternalValueConverter(DictionaryConstants.ADDRESS_TYPE);
-  
+
   public DBAddress()
   {
   }
@@ -360,7 +360,7 @@ public class DBAddress extends DBEntityBase
   {
     return street;
   }
-  
+
   public void copyFrom(Address address)
   {
     this.addressId = address.getAddressId();
@@ -375,15 +375,15 @@ public class DBAddress extends DBEntityBase
     Double kilometer = address.getKm(); // split in km and hm
     if (kilometer != null)
     {
-      this.km = new Integer(kilometer.intValue());
-      this.hm = new Integer((int)(kilometer * 10) % 10);
+      this.km = kilometer.intValue();
+      this.hm = (int)(kilometer * 10) % 10;
     }
     else
     {
       this.km = null;
       this.hm = null;
     }
-    
+
     this.number1 = TextUtils.leftPadding(address.getNumber1(), "0000");
     this.bis1 = address.getBis1();
     this.number2 = TextUtils.leftPadding(address.getNumber2(), "0000");
@@ -404,8 +404,8 @@ public class DBAddress extends DBEntityBase
   public void copyTo(Address address)
   {
     address.setAddressId(addressId);
-    address.setStreetId(countryId + KernelManager.PK_SEPARATOR + 
-      provinceId + KernelManager.PK_SEPARATOR + 
+    address.setStreetId(countryId + KernelManager.PK_SEPARATOR +
+      provinceId + KernelManager.PK_SEPARATOR +
       cityId + KernelManager.PK_SEPARATOR + streetId);
     address.setAddressTypeId(typeIdConverter.getTypeId(addressTypeId));
     address.setPostalCode(TextUtils.leftPadding(postalCode, "00000"));
@@ -420,7 +420,7 @@ public class DBAddress extends DBEntityBase
     address.setBis2(bis2);
     if (km != null)
     {
-      Double kilometer = new Double(km);
+      Double kilometer = Double.valueOf(km);
       if (hm != null) kilometer += 0.1 * hm;
       address.setKm(kilometer);
     }
